# cookied

./: Cargo.toml  LICENSE  README.md  flake.nix
nix/: module.nix  overlay.nix  package.nix
src/: cli.rs  main.rs  telemetry.rs
