[package]
name = "cookied"
description = "An RFC865 quote-of-the-day server"
authors = [ "Lilly <li@lly.sh>" ]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://codeberg.org/lilly/cookied"
license = "MIT"
keywords = [ "cookied", "quote", "day", "rfc865" ]
categories = [ "command-line-utilities" ]

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
listenfd = "1.0.2"
time = { version = "0.3.39", features = ["formatting"] }
tokio = { version = "1.44.2", features = ["rt", "net", "io-util", "macros"] }
