[package]
name = "cookied"
description = "An RFC865 quote-of-the-day server"
authors = ["Lilly <li@lly.sh>"]
version = "0.2.0"
edition = "2021"
readme = "README.md"
repository = "https://codeberg.org/lilly/cookied"
license = "MIT"
keywords = ["cookied", "quote", "day", "rfc865"]
categories = ["command-line-utilities"]

[profile.release]
lto = true

[features]
telemetry = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "opentelemetry-stdout", "opentelemetry-semantic-conventions", "lazy_static"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
listenfd = "1.0.2"
time = { version = "0.3.39", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["rt", "net", "io-util", "macros"] }
opentelemetry = { version = "0.29.1", optional = true }
opentelemetry-otlp = { version = "0.29.0", default-features = false, features = ["metrics", "http-proto", "reqwest-blocking-client"], optional = true }
opentelemetry_sdk = { version = "0.29.0", optional = true }
opentelemetry-stdout = { version = "0.29.0", default-features = false, features = ["metrics"], optional = true }
opentelemetry-semantic-conventions = { version = "0.29.0", optional = true }
lazy_static = { version = "1.5.0", optional = true }
